@@ -91,8 +91,7 @@ import org.opengis.cs.CS_CoordinateSystem;
  * @author kuepfer
  *  
  */
-public class ImportShapeFileImportPage extends WizardPage implements
-    SelectionListener, ModifyListener, KeyListener
+public class ImportShapeFileImportPage extends WizardPage implements SelectionListener, ModifyListener, KeyListener
 {
 
   //constants
@@ -151,8 +150,7 @@ public class ImportShapeFileImportPage extends WizardPage implements
    * @param title
    * @param titleImage
    */
-  public ImportShapeFileImportPage( String pageName, String title,
-      ImageDescriptor titleImage )
+  public ImportShapeFileImportPage( String pageName, String title, ImageDescriptor titleImage )
   {
     super( pageName, title, titleImage );
     setDescription( "Dieser Dialog liest eine ESRI Shape-Datei in den Workspace ein." );
@@ -216,8 +214,7 @@ public class ImportShapeFileImportPage extends WizardPage implements
     availableCoordinateSystems( m_checkCRS );
     try
     {
-      String defaultCS = KalypsoGisPlugin.getDefault().getCoordinatesSystem()
-          .getName();
+      String defaultCS = KalypsoGisPlugin.getDefault().getCoordinatesSystem().getName();
       m_checkCRS.select( m_checkCRS.indexOf( defaultCS ) );
     }
     catch( RemoteException e1 )
@@ -270,7 +267,7 @@ public class ImportShapeFileImportPage extends WizardPage implements
     data5.grabExcessHorizontalSpace = true;
     styleNameCombo.setLayoutData( data5 );
     styleNameCombo.addSelectionListener( this );
-    
+
     //        new SelectionAdapter()
     //    {
     //      public void widgetSelected( SelectionEvent e )
@@ -316,8 +313,7 @@ public class ImportShapeFileImportPage extends WizardPage implements
       }
 
       //styleFile
-      if( styleTextField.getText() != null
-          && styleTextField.getText().length() > 0 )
+      if( styleTextField.getText() != null && styleTextField.getText().length() > 0 )
       {
         //ok
       }
@@ -340,8 +336,7 @@ public class ImportShapeFileImportPage extends WizardPage implements
     }
 
     // shapeFile
-    if( m_sourceFileText.getText() != null
-        && m_sourceFileText.getText().length() > 0 )
+    if( m_sourceFileText.getText() != null && m_sourceFileText.getText().length() > 0 )
     {
       //ok
     }
@@ -392,12 +387,9 @@ public class ImportShapeFileImportPage extends WizardPage implements
           try
           {
             IPath basePath = m_project.getLocation();
-            String styleUrl = basePath.toFile().toURL()
-                + stylePath.removeFirstSegments( 1 ).toString();
-            Reader reader = new InputStreamReader( ( new URL( styleUrl ) )
-                .openStream() );
-            StyledLayerDescriptor styledLayerDescriptor = SLDFactory
-                .createSLD( reader );
+            String styleUrl = basePath.toFile().toURL() + stylePath.removeFirstSegments( 1 ).toString();
+            Reader reader = new InputStreamReader( ( new URL( styleUrl ) ).openStream() );
+            StyledLayerDescriptor styledLayerDescriptor = SLDFactory.createSLD( reader );
             reader.close();
             Layer[] layers = styledLayerDescriptor.getLayers();
             Vector styleNameVector = new Vector();
@@ -478,7 +470,7 @@ public class ImportShapeFileImportPage extends WizardPage implements
    */
   public void widgetDefaultSelected( SelectionEvent e )
   {
-    //no default selection
+  //no default selection
   }
 
   //ModifyListener
@@ -508,22 +500,18 @@ public class ImportShapeFileImportPage extends WizardPage implements
    */
   public void keyReleased( KeyEvent e )
   {
-    //do nothing
+  //do nothing
   }
 
   public File getShapeBaseFile()
   {
-    return new File( m_project.getLocation()
-        + "/"
-        + FileUtilities.nameWithoutExtension( m_relativeSourcePath
-            .removeFirstSegments( 1 ).toString() ) );
+    return new File( m_project.getLocation() + "/"
+        + FileUtilities.nameWithoutExtension( m_relativeSourcePath.removeFirstSegments( 1 ).toString() ) );
   }
 
   public String getShapeBaseRelativePath()
   {
-    return "project:/"
-        + FileUtilities.nameWithoutExtension( m_relativeSourcePath
-            .removeFirstSegments( 1 ).toString() );
+    return "project:/" + FileUtilities.nameWithoutExtension( m_relativeSourcePath.removeFirstSegments( 1 ).toString() );
   }
 
   public IPath getShapePath()
@@ -531,17 +519,15 @@ public class ImportShapeFileImportPage extends WizardPage implements
     return m_relativeSourcePath;
   }
 
-  KalypsoResourceSelectionDialog createResourceDialog(
-      String[] fileResourceExtensions )
+  KalypsoResourceSelectionDialog createResourceDialog( String[] fileResourceExtensions )
   {
-    return new KalypsoResourceSelectionDialog( getShell(), m_project,
-        "Select resource", fileResourceExtensions, m_project );
+    return new KalypsoResourceSelectionDialog( getShell(), m_project, "Select resource", fileResourceExtensions,
+        m_project );
   }
 
   public CS_CoordinateSystem getCRS()
   {
-    return ConvenienceCSFactory.getInstance().getOGCCSByName(
-        m_checkCRS.getText() );
+    return ConvenienceCSFactory.getInstance().getOGCCSByName( m_checkCRS.getText() );
   }
 
   protected void setProjectSelection( IProject project )
@@ -552,8 +538,7 @@ public class ImportShapeFileImportPage extends WizardPage implements
   private boolean checkCRS( String customCRS )
   {
     boolean result = false;
-    CS_CoordinateSystem cs = ConvenienceCSFactory.getInstance().getOGCCSByName(
-        customCRS );
+    CS_CoordinateSystem cs = ConvenienceCSFactory.getInstance().getOGCCSByName( customCRS );
     if( cs != null )
     {
       result = true;
